# Multi-Doc-Research-Assistant

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
client/: .env.example  index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/lib/: errors.js
docs/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md
server/: .env.example  .vercelignore  app.py  pyproject.toml  requirements-local.txt  requirements.txt  vercel.json
server/app/: main.py
server/app/ai/: __init__.py  base.py  comparison_prompts.py  errors.py  prompts.py  provider.py  synthesis_prompts.py
server/app/ai/llm/: groq_client.py
server/app/api/: router.py
server/app/api/routes/: chat.py  comparison.py  documents.py  reports.py  summaries.py  workspaces.py
server/app/core/: config.py  setup.py
server/app/db/: session.py
server/app/models/: chat_message.py  chat_session.py  document.py  document_chunk.py  processing_job.py  report.py  report_section.py  summary.py  workspace.py
server/app/schemas/: chat.py  comparison.py  document.py  report.py  summary.py  workspace.py
server/app/services/: chat_service.py  chunking_service.py  comparison_service.py  context_builder.py  document_parser.py  document_service.py  file_storage_service.py  llm_service.py  report_service.py  retrieval_service.py  summary_service.py  synthesis_parser.py  workspace_service.py
server/app/utils/: citations.py  pdf.py  text.py
server/app/vectorstore/: chroma.py  embeddings.py
server/tests/: test_business_logic.py
(+29 files in other folders)
