[project]
name = "multi-doc-research-assistant-server"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.117.1,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.12,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "pypdf>=5.0,<7.0",
  "groq>=0.13,<1.0",
]
